fixed table headers to be aligned/styled the same

--- a/client/src/css/GeneralTable.css
+++ b/client/src/css/GeneralTable.css
@@ -24,7 +24,8 @@
 .table-header,
 .expense-table-header,
 .food-table-header,
-.itemized-table-header {
+.itemized-table-header,
+.mileage-table-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
